# pentropybot

./: Cargo.toml  README.md
bot/: Cargo.toml
bot/src/: handler_tree.rs  handlers.rs  keyboards.rs  main.rs  messages.rs
entropy/src/: lib.rs
password/src/: is_common.rs  lib.rs
